# mapiproxy

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  release.toml
.github/workflows/: buildntest.yml  create-binaries.yml  create-release-from-tag.yml  test-and-clippy.yml
examples/: x.rs
src/: entrypoint.rs  lib.rs  main.rs  mapi.rs  network.rs  proxy.rs  reactor.rs  render.rs  usage.txt
src/mapi/: analyzer.rs  mod.rs
src/pcap/: mod.rs  mybufread.rs  tcp.rs  tracker.rs
src/proxy/: event.rs  forward.rs  mod.rs  network.rs
testdata/: capture.pcap  capture.pcapng
