[package]
name = "mapiproxy"
version = "0.5.0-alpha.1"
edition = "2021"

# also forbidden in release.toml
publish = false

default-run = "mapiproxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argsplitter = "0.5.0"
itertools = "0.12.1"
mio = { version = "0.8.10", features = [ "net", "os-ext", "os-poll" ] }
slab = "0.4.9"
smallvec = { version = "1.13.1", features = [ "union" ] }
thiserror = "1.0.56"

[dev-dependencies]
diff = "0.1.13"
