[package]
name = "mapiproxy"
version = "0.5.3-alpha.1"
description = "A proxy for debugging MonetDB's wire protocol"
authors = [ "Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>" ]
keywords = [ "monetdb", "mapi", "proxy" ]
categories = [ "command-line-utilities", "database" ]
license = "MPL-2.0"

# for now
readme = "README.md"
homepage = "https://github.com/joerivanruth/mapiproxy"
repository = "https://github.com/joerivanruth/mapiproxy"


edition = "2021"
default-run = "mapiproxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argsplitter = "0.5.0"
ctrlc = "3.4.2"
is-terminal = "0.4.12"
itertools = "0.12.1"
lazy-regex = "3.1.0"
mio = { version = "0.8.10", features = [ "net", "os-ext", "os-poll" ] }
pcap-file = "2.0.0"
slab = "0.4.9"
smallvec = { version = "1.13.1", features = [ "union" ] }
thiserror = "1.0.56"

[dev-dependencies]
diff = "0.1.13"
semver = "1.0.21"

